force-app/main/default/objects/Annual_Carrier_RFI__c/Annual_Carrier_RFI__c.object-meta.xml
<CustomObject>
    <description>Object to collect RFI and RFP questions and responses for carriers</description>
    <label>Annual Carrier RFI</label>
    <nameField>
        <label>Annual Carrier RFI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Carrier RFIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>