force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Advance_Funding_Quick_Pay_Options__c.field-meta.xml
<CustomField>
    <fullName>Advance_Funding_Quick_Pay_Options__c</fullName>
    <label>Advance Funding Quick Pay Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered: Specific</fullName>
            </value>
            <value>
                <fullName>Offered: Aggregate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>