force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Aggregate_Claim_Report_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Claim_Report_Frequency__c</fullName>
    <label>Aggregate Claim Report Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>