force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Carrier_RFI_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_RFI_Status__c</fullName>
    <label>Carrier RFI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>