force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Carrier_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Annual_Carrier_RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>