force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Detail_Suspension_from_Writing_LoC__c.field-meta.xml
<CustomField>
    <fullName>Detail_Suspension_from_Writing_LoC__c</fullName>
    <label>Detail Suspension from Writing LoC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>