force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Final_Claim_Authority__c.field-meta.xml
<CustomField>
    <fullName>Final_Claim_Authority__c</fullName>
    <label>Final Claim Authority</label>
    <type>TextArea</type>
</CustomField>