force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Licensed_to_do_Business__c.field-meta.xml
<CustomField>
    <fullName>Licensed_to_do_Business__c</fullName>
    <label>Licensed to do Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All 50 United States and Territories</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>