force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Licensed_to_do_Business_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Licensed_to_do_Business_Exceptions__c</fullName>
    <label>Licensed to do Business Exceptions</label>
    <type>TextArea</type>
</CustomField>