force-app/main/default/objects/Annual_Carrier_RFI__c/fields/List_Ineligible_Industries__c.field-meta.xml
<CustomField>
    <fullName>List_Ineligible_Industries__c</fullName>
    <label>List Ineligible Industries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>