force-app/main/default/objects/Annual_Carrier_RFI__c/fields/New_Renew_Client_Signature__c.field-meta.xml
<CustomField>
    <fullName>New_Renew_Client_Signature__c</fullName>
    <description>Formal Disclosure: Will you agree to no client signature required at new or renewal?</description>
    <inlineHelpText>Formal Disclosure: Will you agree to no client signature required at new or renewal?</inlineHelpText>
    <label>New/Renew Client Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>