force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Notification_of_Specific_ClaimCurr__c.field-meta.xml
<CustomField>
    <fullName>Notification_of_Specific_ClaimCurr__c</fullName>
    <label>Notification of Specific Claim $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>