force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Other_Reinsurer_and_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Other_Reinsurer_and_Percentage__c</fullName>
    <description>If less than 100%, please identify additional reinsurer(s) and the respective percentage of assumed liability.</description>
    <inlineHelpText>If less than 100%, please identify additional reinsurer(s) and the respective percentage of assumed liability.</inlineHelpText>
    <label>Other Reinsurer and Percentage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>