force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Ownership_Structure__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Structure__c</fullName>
    <description>Explain your ownership structure</description>
    <inlineHelpText>Explain your ownership structure</inlineHelpText>
    <label>Ownership Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>