force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Percentage_of_the_Risk_Assumed__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_the_Risk_Assumed__c</fullName>
    <label>Percentage of the Risk Assumed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>