force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Product_LoC__c.field-meta.xml
<CustomField>
    <fullName>Product_LoC__c</fullName>
    <label>Product/LoC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical HMO</fullName>
            </value>
            <value>
                <fullName>Medical PPO</fullName>
            </value>
            <value>
                <fullName>Medical HDHP</fullName>
            </value>
            <value>
                <fullName>Medical Indemnity</fullName>
            </value>
            <value>
                <fullName>HRA/HSA</fullName>
            </value>
            <value>
                <fullName>Stop Loss</fullName>
            </value>
            <value>
                <fullName>Dental Managed</fullName>
            </value>
            <value>
                <fullName>Dental PPO</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Wellness Program</fullName>
            </value>
            <value>
                <fullName>Employee Assistance Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>