force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Responses_Good_Through__c.field-meta.xml
<CustomField>
    <fullName>Responses_Good_Through__c</fullName>
    <label>Responses Good Through</label>
    <type>Date</type>
</CustomField>