force-app/main/default/objects/Annual_Carrier_RFI__c/fields/RFI_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Complete_Date__c</fullName>
    <label>RFI_Complete_Date</label>
    <type>Date</type>
</CustomField>