force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Suspension_from_Writing_LoC__c.field-meta.xml
<CustomField>
    <fullName>Suspension_from_Writing_LoC__c</fullName>
    <description>Have you ever been suspended from writing this line of coverage?</description>
    <inlineHelpText>Have you ever been suspended from writing this line of coverage?</inlineHelpText>
    <label>Suspension from Writing LoC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, the company has been suspended from writing this LoC</fullName>
            </value>
            <value>
                <fullName>No, the company has NOT been suspended from writing this LoC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>