force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Total_Current_Annualized_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Annualized_Premium__c</fullName>
    <label>Total Current Annualized Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>