force-app/main/default/objects/Annual_Carrier_RFI__c/fields/Total_Number_of_Current_Customers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Current_Customers__c</fullName>
    <description>How many clients do you currently have in your block of business?</description>
    <inlineHelpText>How many clients do you currently have in your block of business?</inlineHelpText>
    <label>Total Number of Current Customers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>